# libb-date

./: README.md  doctest.rst  pyproject.toml
src/date/: __init__.py  business.py  date.py
src/libb_date/: __init__.py  date.py
tests/: test_business.py  test_date.py  test_daterange.py  test_datetime.py  test_time.py
