[tool.poetry]
name = "libb-date"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

pandas-market-calendars = "*"
pendulum = "^3.0.0"
wrapt = "*"
typing-extensions = "*"
regex = "*"

asserts = { version = "^0.12.0", optional = true }
pytest = { version = "^8.0.0", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp.git", rev = "master", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "pdbpp",
  "pytest",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
