[tool.poetry]
name = "libb-date"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"
packages = [{ include = "date", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"

pandas-market-calendars = "*"
pendulum = "^3.0.0"
wrapt = "*"
typing-extensions = "*"
regex = "*"

libb-util = { git = "https://github.com/bissli/libb-util", extras = ['pandas'], rev = "master" }

# = test
asserts = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp", optional = true, rev = "master" }

[tool.poetry.extras]
test = [
  "asserts",
  "pdbpp",
  "pytest",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
